# AutoClaimML

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  artifact.dvc  demo.py  dvc.yaml  main.py  pyproject.toml  requirements.txt  setup.py  template.py
.github/workflows/: aws.yaml
artifacts/data_transformation/transformed_object/: preprocessing.pkl
config/: model.yaml  schema.yaml
experiments/: complete-nb-exp.ipynb  mongoDB.ipynb
src/AutoClaimML/cloud_storage/: aws_storage.py
src/AutoClaimML/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/AutoClaimML/configuration/: aws_connection.py  configuration.py  mongo_db_connection.py
src/AutoClaimML/constants/: __init__.py
src/AutoClaimML/data_access/: vehicle_db.py
src/AutoClaimML/entity/: artifact_entity.py  config_entity.py  estimator.py  s3_estimator.py
src/AutoClaimML/exception/: __init__.py
src/AutoClaimML/pipeline/: prediction_pipeline.py  training_pipeline.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
src/configuration/: aws_connection.py  configuration.py  mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: proj1_data.py  vehicle_db.py
src/entity/: artifact_entity.py  config_entity.py  estimator.py  s3_estimator.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipeline/: training_pipeline.py
src/utils/: main_utils.py
static/css/: style.css
templates/: vehicledata.html
(+2 files in other folders)
