# pyproject.toml

[project]
name = "AutoClaimML"
version = "0.0.1"
description = "An MLOps project for productionizing models"
authors = [{name = "Aditya AK", email = "aakuskar.980@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["AutoClaimML*"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}